--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,17 +24,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
    kotlinOptions {
-       jvmTarget = '1.8'
+       jvmTarget = '17'
   }
     buildFeatures {
         viewBinding true
     }
 }
-//apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-kapt'
 
 dependencies {
 
@@ -53,17 +53,21 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation'com.squareup.retrofit2:converter-gson:2.9.0'
 
-
     // Retrofit with Scalar Converter
-    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+    //implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:4.13.0"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 
+    //ROOM
+    implementation "androidx.room:room-runtime:2.5.2"
+    annotationProcessor "androidx.room:room-compiler:2.5.2"
+    testImplementation "androidx.room:room-testing:2.5.2"
 
-
+    implementation "androidx.room:room-ktx:2.5.2"
+    kapt "androidx.room:room-compiler:2.5.2"
 
 
 
